MDEV-25501 routine_definition in information_schema.routines loses tablename if it starts with an _ and is not backticked

remove code duplication in Lex_input_stream::scan_ident_middle(),
make sure identifiers are always use the same code path whether
they start form an underscore or not.